--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 asgiref==3.6.0
+cffi==1.15.1
+cryptography==39.0.0
 Django==4.1.5
 django-cors-headers==3.13.0
 django-filter==22.1
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-camel-case==1.3.0
+drf-jwt==1.19.2
 Markdown==3.4.1
+numpy==1.24.1
+packaging==23.0
+Pillow==9.4.0
+pycparser==2.21
+PyJWT==2.6.0
+pyparsing==3.0.9
 pytz==2022.7
+six==1.16.0
 sqlparse==0.4.3
