--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,16 @@ django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-camel-case==1.3.0
 drf-jwt==1.19.2
+Faker==12.0.1
 Markdown==3.4.1
+mixer==7.2.2
 numpy==1.24.1
 packaging==23.0
 Pillow==9.4.0
 pycparser==2.21
 PyJWT==2.6.0
 pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2022.7
 six==1.16.0
 sqlparse==0.4.3
